using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;


internal class KnightAnimStrings
{
    internal static string isRunning = "isRunning";
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string meleeAttackTrigger = "meleeAttackTrigger";
    //internal static string fire2Trigger = "fire2Trigger";

    //Combat Related
    internal static string canMove = "canMove";
    internal static string canAttack = "canAttack";
    //internal static string canDash = "canDash";

}
