using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;
using Unity.VisualScripting;

internal class MageAnimStrings
{
    internal static string isRunning = "isRunning";
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    //internal static string jumpTrigger = "jumpTrigger";
}

